# aoc2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/aoc2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day05.py  test_day06.py  test_day07.py
